# rust-neuro-sama-game-api

./: Cargo.toml  README.md
neuro-sama-derive/: Cargo.toml
neuro-sama-derive/src/: lib.rs
neuro-simulator/: Cargo.toml  README.md  shell.nix
neuro-simulator/src/: main.rs
src/: game.rs  lib.rs  schema.rs
src/game/: glue.rs
test-game/: Cargo.toml
test-game/src/: main.rs
